# kinova_motion

./: .gitignore  package.xml  setup.cfg  setup.py
launch/: rec_rep2.launch.py  replayer_only.launch.py
rec_rep2/: compliant_mode.py  recorder.py  replayer.py
test_folder/: testFile2.txt
